change app model according config model

--- a/SendMessageApp/app.config
+++ b/SendMessageApp/app.config
@@ -18,7 +18,7 @@
       <add From="test@test.ru" Host="smtp.yandex.ru" Port="25" EnableSsl="true" UserName="test" Password="test" />
     </Mailboxes>
     <Contacts>
-      <add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru"/>
+      <add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru" IsEnabledCall="false"/>
       <!--<add PhoneNumber="+79106707061"/>
         <add PhoneNumber="+79045991084"/>
         <add PhoneNumber="+79048596913"/>-->
