--- a/SendMessageApp/app.config
+++ b/SendMessageApp/app.config
@@ -5,7 +5,7 @@
   </configSections>
   <SendMessage>
     <Modems>
-      <add InitATCommands="ATE0;AT+IPR=115200;AT+CMGF=1" WaitForATCommand="00:00:10" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10">
+      <add InitATCommands="ATE0;AT+IPR=115200;AT+CMGF=1" WaitForATCommand="00:00:10" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10" PeriodReboot="1.00:00:00" PeriodPing="00:00:15">
         <COMPort PortName="COM1" BaudRate="115200" Parity="None" DataBits="8" StopBits="One" Handshake="None"  />
       </add>
       <!--;AT+CSCA?;AT+CSMP=17,167,0,25;AT+CSCS="UCS2"-->
@@ -18,8 +18,8 @@
       <add From="test@test.ru" Host="smtp.yandex.ru" Port="25" EnableSsl="true" UserName="test" Password="test" />
     </Mailboxes>
     <Contacts>
-      <add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru" IsEnabledCall="false"/>
-      <!--<add PhoneNumber="+79106707061"/>
+      <!--<add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru" IsEnabledCall="false"/>
+      <add PhoneNumber="+79106707061"/>
         <add PhoneNumber="+79045991084"/>
         <add PhoneNumber="+79048596913"/>-->
     </Contacts>
