--- a/SendMessage/packages.config
+++ b/SendMessage/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net4" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net4" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net4" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net4" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net4" />
+  <package id="Quartz" version="2.3.3" targetFramework="net4" />
 </packages>
