--- a/SendMessageApp/app.config
+++ b/SendMessageApp/app.config
@@ -5,9 +5,17 @@
   </configSections>
   <SendMessage>
     <Modems>
-      <add InitATCommands="ATE0;AT+IPR=115200;AT+CMGF=1" WaitForATCommand="00:00:10" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10" PeriodReboot="1.00:00:00" PeriodPing="00:00:15">
+      <add WaitForATCommand="00:00:10" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10" PeriodReboot="1.00:00:00" PeriodPing="00:30:00">
         <COMPort PortName="COM1" BaudRate="115200" Parity="None" DataBits="8" StopBits="One" Handshake="None"  />
+        <InitATCommands>
+          <add ATRequest="ATE0" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest="AT+IPR=115200" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest="AT+CMGF=1" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest="AT+CSMP=17,167,0,25" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest='AT+CSCS="UCS2"' ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+        </InitATCommands>
       </add>
+      <!--'ATE0;AT+IPR=115200;AT+CSMS=0;AT+CMGF=1;AT+CSCA?;AT+CSMP=17,167,0,25;AT+CSCS="UCS2"'-->
       <!--;AT+CSCA?;AT+CSMP=17,167,0,25;AT+CSCS="UCS2"-->
       <!--MaxPauseInIncomingData="00:00:00.300"-->
       <!--<add InitATCommands="AT+IPR=115200;AT+CMGF=1" WaitForATCommand="00:00:20" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10">
@@ -18,8 +26,8 @@
       <add From="test@test.ru" Host="smtp.yandex.ru" Port="25" EnableSsl="true" UserName="test" Password="test" />
     </Mailboxes>
     <Contacts>
-      <!--<add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru" IsEnabledCall="false"/>
-      <add PhoneNumber="+79106707061"/>
+      <add Description="Nikishkin Sergey" PhoneNumber="+79040377778" Email="frodo89@nm.ru" IsEnabledCall="false"/>
+      <!--<add PhoneNumber="+79106707061"/>
         <add PhoneNumber="+79045991084"/>
         <add PhoneNumber="+79048596913"/>-->
     </Contacts>
