--- a/SendMessageApp/app.config
+++ b/SendMessageApp/app.config
@@ -8,11 +8,20 @@
       <add WaitForATCommand="00:00:10" TimesToRepeatATCommand="1" PauseBetweenOpen="00:00:10" PeriodReboot="1.00:00:00" PeriodPing="00:30:00">
         <COMPort PortName="COM1" BaudRate="115200" Parity="None" DataBits="8" StopBits="One" Handshake="None"  />
         <InitATCommands>
+          <!--<add ATRequest="AT+CSCA?" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:10" />-->
+          <add ATRequest="ATH" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:10" />
+          <add ATRequest="AT&amp;F" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
           <add ATRequest="ATE0" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
           <add ATRequest="AT+IPR=115200" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
-          <add ATRequest="AT+CMGF=1" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
-          <add ATRequest="AT+CSMP=17,167,0,25" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
-          <add ATRequest='AT+CSCS="UCS2"' ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest="AT+CMGF=0" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <!--<add ATRequest="AT+CMGS=28" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />-->
+          <!--<add ATRequest="AT+CSMP=17,167,0,25" ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />
+          <add ATRequest='AT+CSCS="UCS2"' ExpectedATResponse="OK" TimesToRepeat="1" WaitForResponse="00:00:05" />-->
+
+
+          <!--AT+CMGF=0
+          AT+CSMS=0
+          AT+CMGS=23-->
         </InitATCommands>
       </add>
       <!--'ATE0;AT+IPR=115200;AT+CSMS=0;AT+CMGF=1;AT+CSCA?;AT+CSMP=17,167,0,25;AT+CSCS="UCS2"'-->
